--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,1 @@
-driverClassName=com.mysql.jdbc.Driver
-url=postgresql:jdbc://localhost:3306/test
-username=root
-password=password
+server.port = 8000
